# app-kubevirt

./: .gitreview  .zuul.yaml  debian_iso_image.inc  debian_pkg_dirs  debian_stable_docker_images.inc  github_sync.trigger  test-requirements.txt  tox.ini
python-k8sapp-kubevirt/debian/: meta_data.yaml
python-k8sapp-kubevirt/debian/deb_folder/: changelog  control  copyright  python3-k8sapp-kubevirt-wheels.install  python3-k8sapp-kubevirt.install  rules
python-k8sapp-kubevirt/k8sapp_kubevirt/: setup.cfg  setup.py  tox.ini
python-k8sapp-kubevirt/k8sapp_kubevirt/k8sapp_kubevirt/helm/: __init__.py
python3-k8sapp-kubevirt/debian/: meta_data.yaml
python3-k8sapp-kubevirt/debian/deb_folder/: changelog  control  rules
python3-k8sapp-kubevirt/k8sapp_kubevirt/: .stestr.conf  pylint.rc  setup.cfg  setup.py  tox.ini
python3-k8sapp-kubevirt/k8sapp_kubevirt/k8sapp_kubevirt/common/: constants.py
python3-k8sapp-kubevirt/k8sapp_kubevirt/k8sapp_kubevirt/helm/: kubevirt.py
python3-k8sapp-kubevirt/k8sapp_kubevirt/k8sapp_kubevirt/lifecycle/: __init__.py  lifecycle_kubevirt.py
python3-k8sapp-kubevirt/k8sapp_kubevirt/k8sapp_kubevirt/tests/: test_kubevirt.py  (+1 more)
stx-kubevirt-app-helm/debian/: meta_data.yaml  stx-kubevirt-app-helm.stable_docker_image
stx-kubevirt-app-helm/debian/deb_folder/: changelog  control  copyright  rules
stx-kubevirt-app-helm/docker/: Dockerfile
stx-kubevirt-app-helm/stx-kubevirt-app-helm/: README
stx-kubevirt-app-helm/stx-kubevirt-app-helm/files/: metadata.yaml
stx-kubevirt-app-helm/stx-kubevirt-app-helm/fluxcd-manifests/: kustomization.yaml
(+41 files in other folders)
