[metadata]
name = k8sapp-kubevirt
summary = StarlingX sysinv extensions for kubevirt
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    k8sapp_kubevirt

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    kubevirt-app = systemconfig.helm_plugins.kubevirt

systemconfig.app_lifecycle =
    kubevirt-app = k8sapp_kubevirt.lifecycle.lifecycle_kubevirt:KubeVirtAppLifecycleOperator

systemconfig.helm_plugins.kubevirt =
    001_kubevirt-app = k8sapp_kubevirt.helm.kubevirt:KubeVirtHelm

[wheel]
universal = 1
